# semester-2025-fall

./: .claude-code-config.md  .claude-orchestration-config.md  .claude-orchestration-triggers.md  .claude-task-orchestration.md  .claude-task-templates.md  .clinerules-architect  .clinerules-ask  .clinerules-code  .clinerules-debug  .clinerules-test  .cloudflare  .codexignore  .env.example  .envrc  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BLACKBOARD_IFRAMES.md  CALENDAR_SYNC_VERIFICATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_ORCHESTRATION_GUIDE.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOY_NOW.md  GEMINI.md  MULTI_MACHINE_QUICKSTART.md  Makefile  ORCHESTRATION_COMPLETE.md  QUICK_REFERENCE.md  QUICK_TOKEN_SETUP.md  README.md  REPOSITORY_STATUS.md  SECRETS_AUDIT.md  SERVER_INFO.md  V2_VALIDATION_REPORT.md  academic-calendar.json  claude_init.py  coverage.xml  main.py  (+12 more)
.claude/: .mcp.json  CLAUDE.md  ORCHESTRATION_SYSTEM_UPGRADE.md  README.md  settings.json  snippets.json  workflows.json
.claude/agents/: course-content.md  deploy-manager.md  orchestrator.md  qa-validator.md
.claude/commands/: agentic-debug.md  semester-prep.md
.claude/hooks/: pre-commit.sh  task-complete.sh
.github/: dependabot.yml  pull_request_template.md  refactor-issues.yaml
.github/ISSUE_TEMPLATE/: agent_workstream.md  coverage-ratchet.md  golden-tests-filters.md  health-checks-and-suppress-policy.md  integration-db-timeout.md  typing-expansion-phase1.md
.github/PULL_REQUEST_TEMPLATE/: katex-migration.md
.github/workflows/: ci.yml  coverage-summary.yml  pages.yml  release.yml  scheduled.yml  smoke.yml  test.yml
assets/css/: course.css
assets/js/: generator.js
cloudflare/: _headers.preview  _headers.prod  _redirects
cypress/e2e/: epsilon-delta.cy.js
dashboard/: API_DOCUMENTATION.md  __init__.py  advanced_orchestrator.py  app.py  config.py  models.py  orchestration_agent.py  orchestrator.py  requirements.txt  startup.py  type_aliases.py  types.py
dashboard/agents/: __init__.py  base.py  blackboard.py  calendar_sync.py  course_content.py  deployment.py  qa_validator.py
dashboard/api/: __init__.py  courses.py  deploy.py  export.py  stats.py  tasks.py  tasks_htmx.py
dashboard/db/: __init__.py  repo.py
dashboard/schema/: quick_add.schema.json
dashboard/services/: __init__.py  dependency_service.py  prioritization.py  retro.py  task_service.py
dashboard/state/: courses.json  execution_metrics.json  iframe_deployment.json  now_queue.json  quick_reference.json  tasks.json  tasks_backup.json  tasks_new.json  tasks_with_checklists.json
dashboard/templates/: _kanban_board.html  _kanban_card.html  _notification.html  _task_children.html  _task_list.html  _task_row.html  base.html  dashboard.html  filtered.html  schedules_listing.html  syllabi_listing.html  syllabus_preview.html  tasks.html
dashboard/templates_src/: 01_blackboard_setup.yaml  02_syllabus_prep.yaml  03_weekly_modules.yaml  sample_tasks.json
dashboard/tools/: contracts.py  dag.py  generate_tasks.py  generate_tasks_with_deps.py  helpers.py  phase.py  priority_contracts.yaml  queue_select.py  reprioritize.py  scoring.py  validate.py
dashboard/utils/: __init__.py  decorators.py
dashboard/views/: __init__.py  main.py
docs/: ARCHITECTURAL_IMPROVEMENTS.md  ARCHITECTURE.md  ARCHITECTURE_EVALUATION.md  ARCHITECTURE_REPORT.md  BUILD_PROCESS.md  CF_GO_INTEGRATION.md  CLAUDE_CODE_ORCHESTRATION.md  CLOUDFLARE_DEPLOYMENT.md  CONTENT.md  CONTRIBUTING.md  CSS_ARCHITECTURE.md  CUSTOM_DUE_DATES.md  DATE_VERIFICATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPRECATIONS.md  DIAGNOSTICS_DIRECTIVE.md  DUE_DATES_SYSTEM.md  FALL_2025_SEMESTER_PREPARATION_FINAL_REPORT.md  FINAL_ORCHESTRATION_REPORT.md  FLASK_SETUP_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INDEX.md  INTERACTIVE_MATH251_TOOL.md  INTERACTIVE_TOOLS_GUIDE.md  LINTING_STANDARDS.md  MATH221_SCHEDULE_UPDATE.md  MATH251_SCHEDULE_UPDATE.md  MIGRATION_GUIDE.md  MULTI_MACHINE_SETUP.md  MYPY_STRATEGY.md  ORCHESTRATION_COMPLETE_REPORT.md  ORCHESTRATION_PLAN.md  ORCHESTRATION_STATUS_REPORT.md  PROJECT_INDEX.md  QA_FIX_PLAN.md  REFACTOR_STATUS.md  REPOSITORY_ARCHITECTURE_OVERVIEW.md  SITE_BUILDER.md  SMART_PRIORITIZATION.md  (+16 more)
docs/api/: index.rst
memory-bank/: active-context.md  decision-log.md  product-context.md  progress.md  system-patterns.md
profiles/: instructor.json
scripts/: analyze_task_deps.py  build_bb_packages.py  build_pipeline.py  build_pipeline_impl.py  build_schedules.py  build_syllabi.py  configure-domain.md  create-secrets-interactive.sh  dev-setup.sh  fetch-all-docs.sh  fix_linting.py  generate_dashboard_config.py  generate_manifests.py  get-flask-docs-quick.sh  get-flask-docs.sh  init-secrets.sh  load-secrets-gopass.sh  migrate_to_sqlite.py  setup-cloudflare-token.sh  setup-dev.sh  setup-gopass-secrets.sh  setup-pages-cf-go.sh  site_build.py  sync-secrets.sh  transfer-age-key.sh  validate_json.py  validate_v110.py  verify-setup.sh  weekgen.py
templates/: course_schedule.html.j2  syllabus.html.j2  syllabus.md.j2
tests/: conftest.py  test_api_endpoints.py  test_api_export_stats_db.py  test_config.py  test_course_service_projection.py  test_dag_tools.py  test_dashboard_app.py  test_dashboard_tools.py  test_date_rules.py  test_date_rules_enforcement.py  test_date_rules_ported.py  test_db_repo.py  test_decorators.py  test_dependency_service.py  test_export_more.py  test_generate_tasks_yaml_flow.py  test_golden_fixtures.py  test_golden_validation.py  test_helpers_more.py  test_htmx_endpoints.py  test_infrastructure_validation.py  test_models.py  test_phase_and_contracts.py  test_phase_detection.py  test_reprioritize_unit.py  test_scaffold_imports.py  test_schedule_builder_alignment.py  test_scoring_tools.py  test_stable_id_migration.py  test_stats.py  test_task_service.py  test_type_aliases.py  test_utils_decorators.py  test_validate_json_basics.py  test_validate_json_schema_and_project.py  test_validate_module.py  test_validation_gateway.py  test_validation_gateway_schema_v110.py  test_views.py
variables/: semester.json
(+276 files in other folders)
